--- a/client/src/app/authorization/register/register-page.component.html
+++ b/client/src/app/authorization/register/register-page.component.html
@@ -28,7 +28,7 @@
              [disabled]="form.get('email').invalid || form.get('name').invalid || form.get('password').invalid" 
              >Register</button>
         </form>
-        <small>By using this website you agree to our privacy policy</small>
+        <small>By registering you agree to our privacy policy</small>
         <p>Already have an account? <a routerLink="/login" >Login</a></p>
     </mat-card>
 </main>
