Adding change password component

--- a/client/src/app/changepassword/changepassword.component.html
+++ b/client/src/app/changepassword/changepassword.component.html
@@ -1,1 +1,33 @@
-<p>changepassword works!</p>
+<main>
+    <mat-card>
+        <h1>Change Password</h1>
+        <mat-spinner *ngIf="isLoading" ></mat-spinner>
+        <form *ngIf="!isLoading" [formGroup]="form" (submit)="changePassword()" >
+            <mat-form-field>
+                <mat-label>Current Password</mat-label>
+                <input 
+                matInput 
+                type="password" 
+                formControlName="currentPassword" >
+                <mat-error *ngIf="form.get('currentPassword').invalid" >Required</mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>New Password</mat-label>
+                <input 
+                matInput 
+                type="password" 
+                formControlName="newPassword" >
+                <mat-error *ngIf="form.get('newPassword').invalid" >Required</mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Confirm New Password</mat-label>
+                <input 
+                matInput 
+                type="password"  
+                formControlName="confirmPassword" >
+                <mat-error *ngIf="form.get('confirmPassword').invalid" >Required</mat-error>
+            </mat-form-field>
+            <button mat-raised-button color="accent" type="submit" [disabled]="form.get('currentPassword').invalid || form.get('newPassword').invalid  || form.get('confirmPassword').invalid" >Change Password</button>
+        </form>
+    </mat-card>
+</main>
