--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -29,6 +29,9 @@
             <a mat-button routerLink="/schedules" routerLinkActive="mat-accent">View Schedules</a>
         </li>
         <li *ngIf="isAuth">
+            <button mat-button routerLink="/changePassword" routerLinkActive="mat-accent">Change Password</button>
+        </li>
+        <li *ngIf="isAuth">
             <button mat-button (click)="onLogout()" >Logout</button>
         </li>
     </ul>
