--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -22,6 +22,6 @@
             <a mat-raised-button color="accent" routerLink="/register">Register to Create</a>
         </div>
     </div>
-    <div class="grid-block box5">something</div>
+    <div class="grid-block box5"></div>
 
 </div>
