Fixed docs not working, added more functionality

--- a/client/src/app/docs/doc-editor/doc-editor.component.html
+++ b/client/src/app/docs/doc-editor/doc-editor.component.html
@@ -2,9 +2,10 @@
 <mat-card *ngIf="!isLoading">
     <h1>{{ doc.title }}</h1>
     <form [formGroup]="form" (submit)="saveDoc()"  >
-        <mat-form-field>
+        <mat-form-field >
             <mat-label>Content</mat-label>
-            <textarea
+            <textarea 
+            [disabled]="!isUserAdmin"
             rows="50"
             matInput 
             type="text" 
