--- a/client/src/app/docs/doc-item/doc-item.component.html
+++ b/client/src/app/docs/doc-item/doc-item.component.html
@@ -1,6 +1,9 @@
 <li>
     <mat-card>
         <h1>{{ doc.title }}</h1>
+        <p>
+          {{doc.content |slice:0:50}}  
+        </p>
         <h3>{{ stringAsDate(doc.modified) | date:'MM-dd-yy   HH:mm:ss' }}</h3>
         <mat-card-actions>
             <a mat-button color="primary" [routerLink]="['/docs', doc._id]" > EDIT </a>
