--- a/client/src/app/docs/doc-viewer/doc-viewer.component.html
+++ b/client/src/app/docs/doc-viewer/doc-viewer.component.html
@@ -1,9 +1,8 @@
-<h1>{{ doc.title }}</h1>
+<h1>{{ doc?.title }}</h1>
 <form [formGroup]="form">
     <mat-form-field>
         <textarea
         rows="50"
-        [disabled]="true"
         matInput 
         type="text"
         formControlName="content"></textarea>
