--- a/client/src/app/footer/footer.component.css
+++ b/client/src/app/footer/footer.component.css
@@ -7,5 +7,10 @@ ul{
 
 a {
     text-decoration: none;
-    color: rgb(160, 160, 160);
+    color: rgb(0, 0, 0);
+}
+
+.mat-toolbar.mat-primary {
+    background: #b4bff8;
+    color: #fff;
 }
