--- a/client/src/app/header/header.component.css
+++ b/client/src/app/header/header.component.css
@@ -11,10 +11,10 @@ ul{
 
 a {
     text-decoration: none;
-    color: rgb(160, 160, 160);
+    color: rgb(0, 0, 0);
 }
 
 .mat-toolbar.mat-primary {
-    background: #05ff65;
+    background: #b4bff8;
     color: #fff;
 }
